--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "gen:types": "npx supabase gen types typescript --project-id rhjtumtrljzcwdbtctfi --schema public > src/types/supabase.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
