feat(admin,kpi,nav): add KPI dashboards, slug-based routing, and new sidebars

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "generate-password": "^1.7.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
@@ -49,6 +51,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^2.15.4",
+    "resend": "^6.0.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
